@@ -6,6 +6,8 @@ documents those changes that are of interest to users and admins.
  -- BLUEGENE - make 2.1 run correctly on a real bluegene cluster
  -- sacctmgr - Display better debug for when an admin specifies a non-existant 
     parent account when changing parent accounts.
+ -- Added a mechanism to the slurmd to defer the epilog from starting until
+    after a running prolog has finished.
 
 * Changes in SLURM 2.1.0-pre6
 =============================
